deploy/main/default/objects/OrderOfExecution__c/OrderOfExecution__c.object-meta.xml
<CustomObject>
    <label>Order Of Execution</label>
    <nameField>
        <displayFormat>OOE-{0000}</displayFormat>
        <label>Order Of Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Of Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>