deploy/main/default/objects/OrderOfExecution__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Counter</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>