deploy/main/default/objects/OrderOfExecution__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <label>Dummy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>