deploy/main/default/objects/OrderOfExecution__c/fields/Execute__c.field-meta.xml
<CustomField>
    <fullName>Execute__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Execute</label>
    <type>Checkbox</type>
</CustomField>