deploy/main/default/objects/OrderOfExecution__c/validationRules/Positive_Counter.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Counter</fullName>
    <active>true</active>
    <errorConditionFormula>Counter__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Counter__c</errorDisplayField>
    <errorMessage>Counter must be positive number</errorMessage>
</ValidationRule>